// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "type": "any",
    "value": "CountIf",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "type": "any",
    "value": ">=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "type": "any",
    "value": "CountIf",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "type": "boolean",
    "value": ">=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;
